# marketing_ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  New Text Document.txt  README.md  alembic.ini  docker-compose.yml  package-lock.json  pyproject.toml  railway.toml  test_flow.py  test_output.txt
alembic/: env.py
alembic/versions/: 15e04b61681d_add_category_sequence_api_key_to_tool_.py  add_agent_name_to_tool_configs.py
app/: main.py
app/agents/: aggregation_agent.py  contact_agent.py  fallback_agent.py  financial_agent.py  news_agent.py  normalizer.py  orchestrator.py  pipeline.py
app/api/: admin_routes.py  enrichment_routes.py  feedback_routes.py  intelligence_routes.py
app/auth/: dependencies.py  local_auth.py  oidc_auth.py
app/config/: logging_config.py  settings.py
app/db/: models.py  repository.py  session.py
app/flows/: __init__.py  data_fetchers.py  enhancer.py  enrichment_flow.py  flow_state.py  llm_processor.py
app/infrastructure/: cache.py  enhancer.py  evaluation.py  few_shot_manager.py  llm_cache.py  prompt_generator.py  rate_limiter.py  vector_store.py
app/schemas/: __init__.py  contact_agent.py  fallback_model.py  financial_agent.py  news_agent.py
app/services/: salesforce_sync.py
deploy/: buildspec.yml  ecs-task-definition.json
docs/: COMPANY_INTELLIGENCE_PROMPT_VS_MARKETING_AI.md  COPILOT_STUDIO_STEP_BY_STEP.md  COPILOT_STUDIO_TEAMS_MVP.md  UI_SEARCH_AND_ENDPOINTS.md  openapi-copilot-enrichment.json
frontend/: .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts
json/: mock.json
(+20 files in other folders)
